--- a/index.html
+++ b/index.html
@@ -22,37 +22,34 @@
                     <div class="row">
                         <div class="col">
                             <div class="filter filter-type">
-                                <label for="filterType">Type: </label>
                                 <select id="filterType" name="filterType">
                                     <option value="Sedan">Sedan</option>
                                     <option value="Crossover">Crossover</option>
                                     <option value="SUV">SUV</option>
                                     <option value="Truck">Truck</option>
-                                    <option value="all" selected> -- </option>
+                                    <option value="" selected> - Type - </option>
                                 </select>
                             </div>
                         </div>
                         <div class="col">
                             <div class="filter filter-make">
-                                <label for="filterMake">Make: </label>
                                 <select id="filterMake" name="filterType">
                                     <option value="Chevrolet">Chevrolet</option>
                                     <option value="Honda">Honda</option>
                                     <option value="Ford">Ford</option>
                                     <option value="Truck">Silver</option>
-                                    <option value="" selected> -- </option>
+                                    <option value="" selected> - Make - </option>
                                 </select>
                             </div>
                         </div>
                         <div class="col">
                             <div class="filter filter-color">
-                                <label for="filterColor">Color: </label>
                                 <select id="filterColor" name="filterColor">
                                     <option value="Red">Red</option>
                                     <option value="Black">Black</option>
                                     <option value="White">White</option>
                                     <option value="Silver">Silver</option>
-                                    <option value="" selected> -- </option>
+                                    <option value="" selected> - Color - </option>
                                 </select>
                             </div>
                         </div>
